@@ -23,8 +23,8 @@ package org.klomp.snark;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -36,7 +36,9 @@ import java.util.Locale;
 import java.util.Random;
 import java.util.Set;
 
+import net.i2p.crypto.SigType;
 import net.i2p.data.DataHelper;
+import net.i2p.data.Destination;
 import net.i2p.data.Hash;
 import net.i2p.util.ConvertToHash;
 import net.i2p.util.I2PAppThread;
@@ -88,6 +90,8 @@ public class TrackerClient implements Runnable {
   private static final int DHT_ANNOUNCE_PEERS = 4;
   public static final int PORT = 6881;
   private static final int MAX_TRACKERS = 12;
+  // tracker.welterde.i2p
+  private static final Hash DSA_ONLY_TRACKER = ConvertToHash.getHash("cfmqlafjfmgkzbt4r3jsfyhgsr5abgxryl6fnz3d3y5a365di5aa.b32.i2p");
 
   private final I2PSnarkUtil _util;
   private final MetaInfo meta;
@@ -156,6 +160,7 @@ public class TrackerClient implements Runnable {
       consecutiveFails = 0;
       runStarted = false;
       _fastUnannounce = false;
+      snark.setTrackerProblems(null);
       _thread = new I2PAppThread(this, _threadName + " #" + (++_runCount), true);
       _thread.start();
       started = true;
@@ -362,12 +367,21 @@ public class TrackerClient implements Runnable {
       if (h == null) {
           if (_log.shouldLog(Log.WARN))
               _log.warn("Bad announce URL: [" + ann + ']');
-         return false;
+          return false;
+      }
+      // comment this out if tracker.welterde.i2p upgrades
+      if (h.equals(DSA_ONLY_TRACKER)) {
+          Destination dest = _util.getMyDestination();
+          if (dest != null && dest.getSigType() != SigType.DSA_SHA1) {
+              if (_log.shouldLog(Log.WARN))
+                  _log.warn("Skipping incompatible tracker: " + ann);
+              return false;
+          }
       }
       if (existing.size() >= MAX_TRACKERS) {
           if (_log.shouldLog(Log.INFO))
               _log.info("Not using announce URL, we have enough: [" + ann + ']');
-         return false;
+          return false;
       }
       boolean rv = existing.add(h);
       if (!rv) {
@@ -528,9 +542,9 @@ public class TrackerClient implements Runnable {
                         !snark.isChecking() &&
                         info.getSeedCount() > 100 &&
                         coordinator.getPeerCount() <= 0 &&
-                        _util.getContext().clock().now() > _startedOn + 2*60*60*1000 &&
+                        _util.getContext().clock().now() > _startedOn + 30*60*1000 &&
                         snark.getTotalLength() > 0 &&
-                        uploaded >= snark.getTotalLength() * 5 / 4) {
+                        uploaded >= snark.getTotalLength() / 2) {
                         if (_log.shouldLog(Log.WARN))
                             _log.warn("Auto stopping " + snark.getBaseName());
                         snark.setAutoStoppable(false);
@@ -861,18 +875,20 @@ public class TrackerClient implements Runnable {
   }
 
   /**
-   *  @param ann an announce URL
+   *  @param ann an announce URL, may be null, returns false if null
    *  @return true for i2p hosts only
    *  @since 0.7.12
    */
   public static boolean isValidAnnounce(String ann) {
-    URL url;
+    if (ann == null)
+        return false;
+    URI url;
     try {
-       url = new URL(ann);
-    } catch (MalformedURLException mue) {
-       return false;
+        url = new URI(ann);
+    } catch (URISyntaxException use) {
+        return false;
     }
-    return url.getProtocol().equals("http") &&
+    return "http".equals(url.getScheme()) && url.getHost() != null &&
            (url.getHost().endsWith(".i2p") || url.getHost().equals("i2p"));
   }
 
@@ -882,15 +898,17 @@ public class TrackerClient implements Runnable {
    *  @since 0.9.5
    */
   private static Hash getHostHash(String ann) {
-    URL url;
+    URI url;
     try {
-        url = new URL(ann);
-    } catch (MalformedURLException mue) {
+        url = new URI(ann);
+    } catch (URISyntaxException use) {
         return null;
     }
-    if (!url.getProtocol().equals("http"))
+    if (!"http".equals(url.getScheme()))
         return null;
     String host = url.getHost();
+    if (host == null)
+        return null;
     if (host.endsWith(".i2p"))
         return ConvertToHash.getHash(host);
     if (host.equals("i2p")) {
@@ -898,7 +916,7 @@ public class TrackerClient implements Runnable {
         if (path == null || path.length() < 517 ||
             !path.startsWith("/"))
             return null;
-        String[] parts = path.substring(1).split("/?&;", 2);
+        String[] parts = DataHelper.split(path.substring(1), "[/\\?&;]", 2);
         return ConvertToHash.getHash(parts[0]);
     }
     return null;
